--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://mrmenelaus.github.io/site/.",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
